peac_dev/force-app/main/default/objects/Dealer_Surveillance_Model__c/Dealer_Surveillance_Model__c.object-meta.xml
<CustomObject>
    <label>Dealer Surveillance Model</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Model Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dealer Surveillance Models</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>