peac_dev/force-app/main/default/objects/Dealer_Surveillance_Model__c/fields/Actual_Vs_Project_Max__c.field-meta.xml
<CustomField>
    <fullName>Actual_Vs_Project_Max__c</fullName>
    <label>Actual Vs Project Max</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>