peac_dev/force-app/main/default/objects/Dealer_Surveillance_Model__c/fields/Delinquency_Max__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Max__c</fullName>
    <label>Delinquency Max</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>