peac_dev/force-app/main/default/objects/Dealer_Surveillance_Model__c/fields/Net_Investment_Maximum__c.field-meta.xml
<CustomField>
    <fullName>Net_Investment_Maximum__c</fullName>
    <label>Net Investment Maximum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>