peac_dev/force-app/main/default/objects/Dealer_Surveillance_Model__c/fields/Net_Investment_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Net_Investment_Minimum__c</fullName>
    <label>Net Investment Minimum</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>